@@ -24,7 +24,7 @@ package com.hmdm.persistence;
 import com.google.inject.Inject;
 
 import java.io.IOException;
-import java.net.URL;
+import java.net.URI;
 import java.security.NoSuchAlgorithmException;
 import java.util.HashMap;
 import java.util.List;
@@ -62,14 +62,13 @@ public class ConfigurationDAO extends AbstractLinkedDAO<Configuration, Applicati
     private String baseUrl;
     private final EventService eventService;
 
-
     @Inject
     public ConfigurationDAO(ConfigurationMapper mapper,
-                            ApplicationMapper applicationMapper,
-                            ApplicationSettingDAO applicationSettingDAO,
-                            ConfigurationFileDAO configurationFileDAO,
-                            @Named("base.url") String baseUrl,
-                            EventService eventService) {
+            ApplicationMapper applicationMapper,
+            ApplicationSettingDAO applicationSettingDAO,
+            ConfigurationFileDAO configurationFileDAO,
+            @Named("base.url") String baseUrl,
+            EventService eventService) {
         this.mapper = mapper;
         this.applicationMapper = applicationMapper;
         this.applicationSettingDAO = applicationSettingDAO;
@@ -80,12 +79,13 @@ public class ConfigurationDAO extends AbstractLinkedDAO<Configuration, Applicati
     }
 
     public List<Configuration> getAllConfigurations() {
-        return getListWithCurrentUser(currentUser -> this.mapper.getAllConfigurations(currentUser.getCustomerId(), currentUser.getId()));
+        return getListWithCurrentUser(
+                currentUser -> this.mapper.getAllConfigurations(currentUser.getCustomerId(), currentUser.getId()));
     }
 
     public List<Configuration> getAllConfigurationsByValue(String value) {
-        return getListWithCurrentUser(currentUser ->
-                this.mapper.getAllConfigurationsByValue(currentUser.getCustomerId(), "%" + value + "%", currentUser.getId()));
+        return getListWithCurrentUser(currentUser -> this.mapper
+                .getAllConfigurationsByValue(currentUser.getCustomerId(), "%" + value + "%", currentUser.getId()));
     }
 
     public Configuration getConfigurationByName(String name) {
@@ -100,10 +100,13 @@ public class ConfigurationDAO extends AbstractLinkedDAO<Configuration, Applicati
                 this.mapper.insertConfigurationApplications(configuration.getId(), configuration.getApplications());
             }
             if (configuration.getApplicationSettings() != null && !configuration.getApplicationSettings().isEmpty()) {
-                this.mapper.insertConfigurationApplicationSettings(configuration.getId(), configuration.getApplicationSettings());
+                this.mapper.insertConfigurationApplicationSettings(configuration.getId(),
+                        configuration.getApplicationSettings());
             }
-            if (configuration.getApplicationUsageParameters() != null && !configuration.getApplicationUsageParameters().isEmpty()) {
-                this.mapper.saveConfigurationApplicationUsageParameters(configuration.getId(), configuration.getApplicationUsageParameters());
+            if (configuration.getApplicationUsageParameters() != null
+                    && !configuration.getApplicationUsageParameters().isEmpty()) {
+                this.mapper.saveConfigurationApplicationUsageParameters(configuration.getId(),
+                        configuration.getApplicationUsageParameters());
             }
 
             final List<ConfigurationFile> files = configuration.getFiles();
@@ -122,26 +125,34 @@ public class ConfigurationDAO extends AbstractLinkedDAO<Configuration, Applicati
                     this.mapper.removeConfigurationApplicationsById(configuration.getId());
                     if (configuration.getApplications().size() > 0) {
                         configuration.getApplications().forEach(app -> app.setRemove(app.getAction() == 2));
-                        this.mapper.insertConfigurationApplications(configuration.getId(), configuration.getApplications());
+                        this.mapper.insertConfigurationApplications(configuration.getId(),
+                                configuration.getApplications());
                     }
 
                     this.applicationMapper.recheckConfigurationMainApplication(configuration.getId());
                     this.applicationMapper.recheckConfigurationContentApplication(configuration.getId());
-                    // #6159: When updating the configuration via configuration editor page the state of Kiosk Mode flag
-                    // is specified explicitly by the submitted form value, so there is no need to re-check the state of
+                    // #6159: When updating the configuration via configuration editor page the
+                    // state of Kiosk Mode flag
+                    // is specified explicitly by the submitted form value, so there is no need to
+                    // re-check the state of
                     // that flag based on presence of content app in configuration
-//                    this.applicationMapper.recheckConfigurationKioskModes(configuration.getCustomerId());
+                    // this.applicationMapper.recheckConfigurationKioskModes(configuration.getCustomerId());
 
                     this.mapper.removeConfigurationApplicationSettingsById(configuration.getId());
-                    if (configuration.getApplicationSettings() != null && !configuration.getApplicationSettings().isEmpty()) {
-                        this.mapper.insertConfigurationApplicationSettings(configuration.getId(), configuration.getApplicationSettings());
+                    if (configuration.getApplicationSettings() != null
+                            && !configuration.getApplicationSettings().isEmpty()) {
+                        this.mapper.insertConfigurationApplicationSettings(configuration.getId(),
+                                configuration.getApplicationSettings());
                     }
-                    if (configuration.getApplicationUsageParameters() != null && !configuration.getApplicationUsageParameters().isEmpty()) {
-                        this.mapper.saveConfigurationApplicationUsageParameters(configuration.getId(), configuration.getApplicationUsageParameters());
+                    if (configuration.getApplicationUsageParameters() != null
+                            && !configuration.getApplicationUsageParameters().isEmpty()) {
+                        this.mapper.saveConfigurationApplicationUsageParameters(configuration.getId(),
+                                configuration.getApplicationUsageParameters());
                     }
 
-                    List<ConfigurationFile> legacyFiles = this.configurationFileDAO.getConfigurationFiles(configuration.getId());
-                    Map<Integer,ConfigurationFile> legacyFilesMap = new HashMap<Integer, ConfigurationFile>();
+                    List<ConfigurationFile> legacyFiles = this.configurationFileDAO
+                            .getConfigurationFiles(configuration.getId());
+                    Map<Integer, ConfigurationFile> legacyFilesMap = new HashMap<Integer, ConfigurationFile>();
                     for (ConfigurationFile file : legacyFiles) {
                         legacyFilesMap.put(file.getId(), file);
                     }
@@ -154,14 +165,18 @@ public class ConfigurationDAO extends AbstractLinkedDAO<Configuration, Applicati
                                 .forEach(file -> {
                                     try {
                                         ConfigurationFile legacyFile = legacyFilesMap.get(file.getId());
-                                        if (legacyFile != null && file.getExternalUrl().equals(legacyFile.getExternalUrl())) {
+                                        if (legacyFile != null
+                                                && file.getExternalUrl().equals(legacyFile.getExternalUrl())) {
                                             file.setChecksum(legacyFile.getChecksum());
                                         } else {
-                                            final String checksum = CryptoUtil.calculateChecksum(new URL(file.getExternalUrl()).openStream());
+                                            final String checksum = CryptoUtil
+                                                    .calculateChecksum(
+                                                            URI.create(file.getExternalUrl()).toURL().openStream());
                                             file.setChecksum(checksum);
                                         }
                                     } catch (NoSuchAlgorithmException | IOException e) {
-                                        log.error("Failed to calculate checksum for content URL: {}", file.getExternalUrl(), e);
+                                        log.error("Failed to calculate checksum for content URL: {}",
+                                                file.getExternalUrl(), e);
                                         file.setChecksum("");
                                     }
                                 });
@@ -169,17 +184,18 @@ public class ConfigurationDAO extends AbstractLinkedDAO<Configuration, Applicati
                     }
 
                     // Deprecated and not used any more
-/*                    final List<Integer> filesToRemove = config.getFilesToRemove();
-                    if (filesToRemove != null) {
-                        filesToRemove.forEach(fileId -> {
-                            this.configurationFileDAO.removeFileFromDisk(fileId);
-                        });
-                    } */
+                    /*
+                     * final List<Integer> filesToRemove = config.getFilesToRemove();
+                     * if (filesToRemove != null) {
+                     * filesToRemove.forEach(fileId -> {
+                     * this.configurationFileDAO.removeFileFromDisk(fileId);
+                     * });
+                     * }
+                     */
 
                     this.eventService.fireEvent(new ConfigurationUpdatedEvent(configuration.getId()));
                 },
-                SecurityException::onConfigurationAccessViolation
-        );
+                SecurityException::onConfigurationAccessViolation);
     }
 
     @Transactional
@@ -193,17 +209,16 @@ public class ConfigurationDAO extends AbstractLinkedDAO<Configuration, Applicati
                 id,
                 this.mapper::getConfigurationById,
                 configuration -> this.mapper.removeConfigurationById(configuration.getId()),
-                SecurityException::onConfigurationAccessViolation
-        );
+                SecurityException::onConfigurationAccessViolation);
     }
 
     public List<Application> getConfigurationApplications(Integer id) {
         return getLinkedList(
                 id,
                 this.mapper::getConfigurationById,
-                customerId -> this.mapper.getConfigurationApplications(customerId, id, "ca" + CryptoUtil.randomHexString(8)),
-                SecurityException::onConfigurationAccessViolation
-        );
+                customerId -> this.mapper.getConfigurationApplications(customerId, id,
+                        "ca" + CryptoUtil.randomHexString(8)),
+                SecurityException::onConfigurationAccessViolation);
     }
 
     @Transactional
@@ -214,8 +229,7 @@ public class ConfigurationDAO extends AbstractLinkedDAO<Configuration, Applicati
                 id,
                 this.mapper::getConfigurationById,
                 customerId -> this.mapper.getPlainConfigurationApplications(customerId, tblName, id),
-                SecurityException::onConfigurationAccessViolation
-        );
+                SecurityException::onConfigurationAccessViolation);
     }
 
     public boolean isAppInstalledInConfiguration(String pkg, Integer configurationId) {
@@ -223,17 +237,21 @@ public class ConfigurationDAO extends AbstractLinkedDAO<Configuration, Applicati
     }
 
     public Configuration getConfigurationById(Integer id) {
-        return getSingleRecord(() -> this.mapper.getConfigurationById(id), SecurityException::onConfigurationAccessViolation);
+        return getSingleRecord(() -> this.mapper.getConfigurationById(id),
+                SecurityException::onConfigurationAccessViolation);
     }
 
     @Transactional
     public Configuration getConfigurationByIdFull(Integer id) {
-        final Configuration configuration = getSingleRecord(() -> this.mapper.getConfigurationById(id), SecurityException::onConfigurationAccessViolation);
+        final Configuration configuration = getSingleRecord(() -> this.mapper.getConfigurationById(id),
+                SecurityException::onConfigurationAccessViolation);
         if (configuration != null) {
-            final List<ApplicationSetting> appSettings = this.applicationSettingDAO.getApplicationSettingsByConfigurationId(id);
+            final List<ApplicationSetting> appSettings = this.applicationSettingDAO
+                    .getApplicationSettingsByConfigurationId(id);
             configuration.setApplicationSettings(appSettings);
 
-            final List<ConfigurationApplicationParameters> applicationParameters = this.mapper.getApplicationParameters(id);
+            final List<ConfigurationApplicationParameters> applicationParameters = this.mapper
+                    .getApplicationParameters(id);
             configuration.setApplicationUsageParameters(applicationParameters);
 
             final List<ConfigurationFile> files = this.configurationFileDAO.getConfigurationFiles(id);
@@ -245,11 +263,15 @@ public class ConfigurationDAO extends AbstractLinkedDAO<Configuration, Applicati
     }
 
     /**
-     * <p>Upgrades the useage of specified application by specified configuration to most recent version available for
-     * application.</p>
+     * <p>
+     * Upgrades the useage of specified application by specified configuration to
+     * most recent version available for
+     * application.
+     * </p>
      *
-     * @param configurationId an ID of a configuration to upgrade application version for.
-     * @param applicationId an ID of application to upgrade.
+     * @param configurationId an ID of a configuration to upgrade application
+     *                        version for.
+     * @param applicationId   an ID of application to upgrade.
      */
     @Transactional
     public void upgradeConfigurationApplication(Integer configurationId, Integer applicationId) {
@@ -260,13 +282,13 @@ public class ConfigurationDAO extends AbstractLinkedDAO<Configuration, Applicati
                     log.debug("Upgraded application #{} to most recent version for configuration #{}",
                             applicationId, configurationId);
                 },
-                SecurityException::onConfigurationAccessViolation
-        );
+                SecurityException::onConfigurationAccessViolation);
     }
 
     // Moved baseUrl here from resources due to a weird Guice issue (bug?):
     // the resource singleton initializes multiple times and (for DeviceResource)
-    // baseUrl is injected incorrectly (either an empty string or a wrong context parameter)
+    // baseUrl is injected incorrectly (either an empty string or a wrong context
+    // parameter)
     // This is apparently due to call the constructor from a background thread
     // Nevermind, looks like injection of baseUrl in this DAO object works well!
     public String getBaseUrl() {
