@@ -36,7 +36,9 @@ import java.util.Set;
 import java.util.concurrent.ConcurrentSkipListSet;
 
 /**
- * <p>A static list maintaining the list of plugins enabled for current build.</p>
+ * <p>
+ * A static list maintaining the list of plugins enabled for current build.
+ * </p>
  *
  * @author isv
  */
@@ -45,21 +47,30 @@ public final class PluginList {
     private static final Logger log = LoggerFactory.getLogger(PluginList.class);
 
     /**
-     * <p>A collection of identifiers for plugins which have been enabled for the current build.</p>
+     * <p>
+     * A collection of identifiers for plugins which have been enabled for the
+     * current build.
+     * </p>
      */
     private static final Set<String> enabledPlugins = new ConcurrentSkipListSet<>();
 
     /**
-     * <p>Constructs new <code>PluginList</code> instance. This implementation does nothing.</p>
+     * <p>
+     * Constructs new <code>PluginList</code> instance. This implementation does
+     * nothing.
+     * </p>
      */
     private PluginList() {
     }
 
     /**
-     * <p>Checks if specified plugin is enabled for the current build.</p>
+     * <p>
+     * Checks if specified plugin is enabled for the current build.
+     * </p>
      *
      * @param pluginId an identifier of a plugin to check.
-     * @return <code>true</code> if specified plugin is enabled for current build; <code>false</code> otherwise.
+     * @return <code>true</code> if specified plugin is enabled for current build;
+     *         <code>false</code> otherwise.
      * @see PluginConfiguration#getPluginId()
      */
     public static boolean isPluginEnabled(String pluginId) {
@@ -74,7 +85,7 @@ public final class PluginList {
         if (initialized) {
             return;
         }
-        try (ScanResult scanResult = new ClassGraph().enableAllInfo().whitelistPackages("com.hmdm").scan()) {
+        try (ScanResult scanResult = new ClassGraph().enableAllInfo().acceptPackages("com.hmdm").scan()) {
             ClassInfoList pluginConfigClasses = scanResult.getClassesImplementing(PluginConfiguration.class.getName());
             List<String> plugins = pluginConfigClasses.getNames();
 
@@ -85,8 +96,8 @@ public final class PluginList {
             for (String pluginConfigClassName : plugins) {
                 pluginConfigClassName = pluginConfigClassName.trim();
                 try {
-                    PluginConfiguration pluginConfiguration
-                            = (PluginConfiguration) Class.forName(pluginConfigClassName).newInstance();
+                    PluginConfiguration pluginConfiguration = (PluginConfiguration) Class.forName(pluginConfigClassName)
+                            .getDeclaredConstructor().newInstance();
                     String pluginId = pluginConfiguration.getPluginId().toLowerCase();
                     if (processedPlugins.contains(pluginId)) {
                         log.warn("Duplicate plugin found: {}. Skipping initialization of {}",
@@ -103,11 +114,9 @@ public final class PluginList {
                     pluginConfiguration.getTaskModules(context).ifPresent(pluginTaskModules::addAll);
 
                     enabledPlugins.add(pluginId);
-                    
-                } catch (InstantiationException | IllegalAccessException e) {
+
+                } catch (ReflectiveOperationException e) {
                     log.error("Failed to instantiate plugin configuration for plugin '{}'", pluginConfigClassName, e);
-                } catch (ClassNotFoundException e) {
-                    log.error("Could not find plugin configuration class: {}", pluginConfigClassName);
                 }
             }
 
