@@ -58,11 +58,11 @@ import jakarta.ws.rs.Produces;
 import jakarta.ws.rs.core.MediaType;
 import jakarta.ws.rs.core.StreamingOutput;
 
-import io.swagger.annotations.Api;
-import io.swagger.annotations.ApiOperation;
-import io.swagger.annotations.ApiParam;
-import io.swagger.annotations.Authorization;
-import io.swagger.annotations.ResponseHeader;
+import io.swagger.v3.oas.annotations.tags.Tag;
+import io.swagger.v3.oas.annotations.Operation;
+import io.swagger.v3.oas.annotations.Parameter;
+import io.swagger.v3.oas.annotations.security.SecurityRequirement;
+import io.swagger.v3.oas.annotations.headers.Header;
 import org.apache.poi.util.IOUtils;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -70,7 +70,7 @@ import com.hmdm.security.SecurityContext;
 import com.hmdm.util.FileExistsException;
 import com.hmdm.util.FileUtil;
 
-@Api(tags = {"Files"}, authorizations = {@Authorization("Bearer Token")})
+@Tag(name = "Files")
 @Singleton
 @Path("/private/web-ui-files")
 public class FilesResource {
@@ -126,11 +126,8 @@ public class FilesResource {
     }
 
     // =================================================================================================================
-    @ApiOperation(
-            value = "Get all files",
-            notes = "Gets the list of all available files",
-            response = FileView.class,
-            responseContainer = "List"
+    @Operation(summary = "Get all files",
+            description = "Gets the list of all available files"
     )
     @GET
     @Path("/search")
@@ -145,9 +142,8 @@ public class FilesResource {
     }
 
     // =================================================================================================================
-    @ApiOperation(
-            value = "Remove a file",
-            notes = "Removes the file from the MDM server"
+    @Operation(summary = "Remove a file",
+            description = "Removes the file from the MDM server"
     )
     @POST
     @Path("/remove")
@@ -199,10 +195,8 @@ public class FilesResource {
     }
 
     // =================================================================================================================
-    @ApiOperation(
-            value = "Complete file upload",
-            notes = "Commits the file upload to MDM server. Returns the uploaded file data",
-            response = FileView.class
+    @Operation(summary = "Complete file upload",
+            description = "Commits the file upload to MDM server. Returns the uploaded file data"
     )
     @POST
     @Path("/update")
@@ -335,16 +329,13 @@ public class FilesResource {
     }
 
     // =================================================================================================================
-    @ApiOperation(
-            value = "Search files",
-            notes = "Search files meeting the specified filter value",
-            response = FileView.class,
-            responseContainer = "List"
+    @Operation(summary = "Search files",
+            description = "Search files meeting the specified filter value"
     )
     @GET
     @Path("/search/{value}")
     @Produces(MediaType.APPLICATION_JSON)
-    public Response getFilesByName(@PathParam("value") @ApiParam("A filter value") String value) {
+    public Response getFilesByName(@PathParam("value") @Parameter(description = "A filter value") String value) {
         if (!SecurityContext.get().hasPermission("files")) {
             logger.error("Unauthorized attempt to access file list by user " +
                     SecurityContext.get().getCurrentUserName());
@@ -354,23 +345,20 @@ public class FilesResource {
     }
 
     // =================================================================================================================
-    @ApiOperation(
-            value = "Get applications",
-            notes = "Gets the list of applications using the file",
-            response = Application.class,
-            responseContainer = "List"
+    @Operation(summary = "Get applications",
+            description = "Gets the list of applications using the file"
     )
     @GET
     @Path("/apps/{url}")
     @Produces(MediaType.APPLICATION_JSON)
-    public Response getApplicationsForFile(@PathParam("url") @ApiParam("An URL referencing the file") String url) {
+    public Response getApplicationsForFile(@PathParam("url") @Parameter(description = "An URL referencing the file") String url) {
         if (!SecurityContext.get().hasPermission("files")) {
             logger.error("Unauthorized attempt to access file list by user " +
                     SecurityContext.get().getCurrentUserName());
             return Response.PERMISSION_DENIED();
         }
         try {
-            String decodedUrl = URLDecoder.decode(url, "UTF-8");
+            String decodedUrl = URLDecoder.decode(url, StandardCharsets.UTF_8);
             return Response.OK(this.applicationDAO.getAllApplicationsByUrl(decodedUrl));
         } catch (Exception e) {
             logger.error("Unexpected error when getting the list of applications by URL", e);
@@ -401,16 +389,13 @@ public class FilesResource {
     }
 
     // =================================================================================================================
-    @ApiOperation(
-            value = "Get file configurations",
-            notes = "Gets the list of configurations using requested file",
-            response = ApplicationConfigurationLink.class,
-            responseContainer = "List"
+    @Operation(summary = "Get file configurations",
+            description = "Gets the list of configurations using requested file"
     )
     @GET
     @Path("/configurations/{id}")
     @Produces(MediaType.APPLICATION_JSON)
-    public Response getFileConfigurations(@PathParam("id") @ApiParam("File ID") Integer id) {
+    public Response getFileConfigurations(@PathParam("id") @Parameter(description = "File ID") Integer id) {
         if (!SecurityContext.get().hasPermission("files")) {
             logger.error("Unauthorized attempt to get file configurations by user " +
                     SecurityContext.get().getCurrentUserName());
@@ -420,9 +405,8 @@ public class FilesResource {
     }
 
     // =================================================================================================================
-    @ApiOperation(
-            value = "Update file configurations",
-            notes = "Updates the list of configurations using requested file"
+    @Operation(summary = "Update file configurations",
+            description = "Updates the list of configurations using requested file"
     )
     @POST
     @Path("/configurations")
@@ -469,31 +453,27 @@ public class FilesResource {
     }
 
     // =================================================================================================================
-    @ApiOperation(
-            value = "Upload raw file",
-            notes = "Uploads the raw file to server (without attempt to parse APK). Returns a path to uploaded file",
-            response = FileUploadResult.class
+    @Operation(summary = "Upload raw file",
+            description = "Uploads the raw file to server (without attempt to parse APK). Returns a path to uploaded file"
     )
     @POST
     @Produces(MediaType.APPLICATION_JSON)
     @Consumes(MediaType.MULTIPART_FORM_DATA)
     @Path("/raw")
     public Response uploadFilesRaw(@FormDataParam("file") InputStream uploadedInputStream,
-                                @ApiParam("A file to upload") @FormDataParam("file") FormDataContentDisposition fileDetail) throws Exception {
+                                @Parameter(description = "A file to upload") @FormDataParam("file") FormDataContentDisposition fileDetail) throws Exception {
         return uploadFilesInternal(uploadedInputStream, fileDetail, false);
     }
 
     // =================================================================================================================
-    @ApiOperation(
-            value = "Upload file or application",
-            notes = "Uploads the file or application to server. Returns a path to uploaded file",
-            response = FileUploadResult.class
+    @Operation(summary = "Upload file or application",
+            description = "Uploads the file or application to server. Returns a path to uploaded file"
     )
     @POST
     @Produces(MediaType.APPLICATION_JSON)
     @Consumes(MediaType.MULTIPART_FORM_DATA)
     public Response uploadFiles(@FormDataParam("file") InputStream uploadedInputStream,
-                                @ApiParam("A file to upload") @FormDataParam("file") FormDataContentDisposition fileDetail) throws Exception {
+                                @Parameter(description = "A file to upload") @FormDataParam("file") FormDataContentDisposition fileDetail) throws Exception {
         return uploadFilesInternal(uploadedInputStream, fileDetail, true);
     }
 
@@ -599,16 +579,14 @@ public class FilesResource {
     }
 
     // =================================================================================================================
-    @ApiOperation(
-            value = "Download a file",
-            notes = "Downloads the content of the file",
-            responseHeaders = {@ResponseHeader(name = "Content-Disposition")}
+    @Operation(summary = "Download a file",
+            description = "Downloads the content of the file"
     )
     @GET
     @Path("/{filePath}")
     @Produces(MediaType.APPLICATION_OCTET_STREAM)
-    public jakarta.ws.rs.core.Response downloadFile(@PathParam("filePath") @ApiParam("A path to a file") String filePath) throws Exception {
-        File file = new File(filePath + "/" + URLDecoder.decode(filePath, "UTF8"));
+    public jakarta.ws.rs.core.Response downloadFile(@PathParam("filePath") @Parameter(description = "A path to a file") String filePath) throws Exception {
+        File file = new File(filesDirectory + "/" + URLDecoder.decode(filePath, StandardCharsets.UTF_8));
         if (!file.exists()) {
             return jakarta.ws.rs.core.Response.status(404).build();
         } else {
