@@ -22,13 +22,10 @@
 package com.hmdm.rest.resource;
 
 import com.google.common.io.Files;
-import com.hmdm.notification.PushService;
 import com.hmdm.persistence.ApplicationDAO;
 import com.hmdm.persistence.UnsecureDAO;
-import com.hmdm.persistence.UserDAO;
 import com.hmdm.persistence.domain.Application;
 import com.hmdm.persistence.domain.ApplicationVersion;
-import com.hmdm.persistence.domain.User;
 import com.hmdm.rest.json.*;
 import com.hmdm.security.SecurityContext;
 import com.hmdm.util.*;
@@ -46,6 +43,7 @@ import java.io.IOException;
 import java.io.InputStream;
 import java.net.HttpURLConnection;
 import java.net.MalformedURLException;
+import java.net.URI;
 import java.net.URL;
 import java.nio.charset.StandardCharsets;
 import java.util.*;
@@ -70,11 +68,11 @@ public class UpdateResource {
 
     @Inject
     public UpdateResource(@Named("files.directory") String filesDirectory,
-                          @Named("base.url") String baseUrl,
-                          ApplicationDAO applicationDAO,
-                          UnsecureDAO unsecureDAO,
-                          StatsSender statsSender,
-                          APKFileAnalyzer apkFileAnalyzer) {
+            @Named("base.url") String baseUrl,
+            ApplicationDAO applicationDAO,
+            UnsecureDAO unsecureDAO,
+            StatsSender statsSender,
+            APKFileAnalyzer apkFileAnalyzer) {
         this.filesDirectory = filesDirectory;
         this.baseUrl = baseUrl;
         this.applicationDAO = applicationDAO;
@@ -82,7 +80,7 @@ public class UpdateResource {
         this.statsSender = statsSender;
         this.apkFileAnalyzer = apkFileAnalyzer;
         try {
-            URL url = new URL(baseUrl);
+            URL url = URI.create(baseUrl).toURL();
             protocol = url.getProtocol();
             customerDomain = url.getHost();
         } catch (MalformedURLException e) {
@@ -103,7 +101,7 @@ public class UpdateResource {
                 throw new SecurityException("Only superadmin can check for updates");
             }
 
-            URL url = new URL(UpdateSettings.MANIFEST_URL.replace("CUSTOMER_DOMAIN", customerDomain));
+            URL url = URI.create(UpdateSettings.MANIFEST_URL.replace("CUSTOMER_DOMAIN", customerDomain)).toURL();
             logger.info("Checking for update: " + url.toString());
             manifestStr = FileUtil.downloadTextFile(url);
 
@@ -177,12 +175,13 @@ public class UpdateResource {
         return Response.OK(request.getUpdates());
     }
 
-    // Download the web app (using the authentification!) and create the manifest file
+    // Download the web app (using the authentification!) and create the manifest
+    // file
     private boolean downloadWebApp(UpdateEntry app) {
         InputStream inputStream = null;
         HttpURLConnection conn = null;
         try {
-            URL url = new URL(app.getUrl());
+            URL url = URI.create(app.getUrl()).toURL();
             conn = (HttpURLConnection) url.openConnection();
             conn.setReadTimeout(30000);
             conn.setConnectTimeout(30000);
@@ -192,7 +191,8 @@ public class UpdateResource {
 
             if (UpdateSettings.WEB_UPDATE_USERNAME != null && UpdateSettings.WEB_UPDATE_PASSWORD != null) {
                 String userCredentials = UpdateSettings.WEB_UPDATE_USERNAME + ":" + UpdateSettings.WEB_UPDATE_PASSWORD;
-                String basicAuth = "Basic " + new String(Base64.getEncoder().encodeToString(userCredentials.getBytes()));
+                String basicAuth = "Basic "
+                        + new String(Base64.getEncoder().encodeToString(userCredentials.getBytes()));
                 conn.setRequestProperty("Authorization", basicAuth);
             }
 
@@ -243,7 +243,7 @@ public class UpdateResource {
 
             // We download to the temp file to reuse the existing Application management API
             File tempFile = FileUtil.createTempFile(FileUtil.adjustFileName(name));
-            FileUtil.writeToFile(new URL(app.getUrl()).openStream(), tempFile.getAbsolutePath());
+            FileUtil.writeToFile(URI.create(app.getUrl()).toURL().openStream(), tempFile.getAbsolutePath());
 
             APKFileDetails fileDetails = apkFileAnalyzer.analyzeFile(tempFile.getAbsolutePath());
 
@@ -275,12 +275,14 @@ public class UpdateResource {
     // Update installedVersion to version in all configs
     // Record which configurations are affected to notify them via Push notification
     private void updateAppInConfig(UpdateEntry app) {
-        ApplicationVersion currentVersion = applicationDAO.findApplicationVersion(app.getPkg(), app.getCurrentVersion());
+        ApplicationVersion currentVersion = applicationDAO.findApplicationVersion(app.getPkg(),
+                app.getCurrentVersion());
         ApplicationVersion newVersion = applicationDAO.findApplicationVersion(app.getPkg(), app.getVersion());
 
         LinkConfigurationsToAppVersionRequest request = new LinkConfigurationsToAppVersionRequest();
         request.setApplicationVersionId(newVersion.getId());
-        List<ApplicationVersionConfigurationLink> linkList = applicationDAO.getApplicationVersionConfigurations(currentVersion.getId());
+        List<ApplicationVersionConfigurationLink> linkList = applicationDAO
+                .getApplicationVersionConfigurations(currentVersion.getId());
         for (ApplicationVersionConfigurationLink link : linkList) {
             link.setApplicationVersionId(newVersion.getId());
         }
@@ -309,7 +311,8 @@ public class UpdateResource {
     }
 
     private void processLauncherAppEntry(UpdateEntry entry) {
-        // We need to determine the currently installed launcher variant (os/master/system or custom)
+        // We need to determine the currently installed launcher variant
+        // (os/master/system or custom)
         List<Application> appList = applicationDAO.findByPackageId(entry.getPkg());
         if (appList.size() != 1) {
             // Not available for update
@@ -413,7 +416,8 @@ public class UpdateResource {
     private ApplicationVersion findLatestInstalledVersion(List<ApplicationVersion> versions) {
         ApplicationVersion result = null;
         for (ApplicationVersion v : versions) {
-            if (v.isDeletionProhibited() && (result == null || ApplicationUtil.compareVersions(v.getVersion(), result.getVersion()) > 0)) {
+            if (v.isDeletionProhibited()
+                    && (result == null || ApplicationUtil.compareVersions(v.getVersion(), result.getVersion()) > 0)) {
                 result = v;
             }
         }
